[package]
name = "rgrep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = "3.0.0-beta.5"
colored = "2"
tokio = { version = "1.14.0", features = ["full"] }
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
regex = "1"
syntect = "4.4"