[package]
name = "rgrep"
version = "0.2.0"
authors = ["natsunoyoru97 <natsunoyoru97@outlook.com>"]
description = "A simple grep printing in a pretty format"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.5"
colored = "2"
glob = "0.3"
tokio = { version = "1.14.0", features = ["full"] }
regex = "1"